eoc/eoc-rs/crates/eoc-vendor-api/tests/snapshots/snapshots__cohere_basic.snap
---
source: crates/eoc-vendor-api/tests/snapshots.rs
expression: body
---
{
  "messages": [
    {
      "content": "hello, world",
      "role": "user"
    }
  ],
  "model": "command-r-plus",
  "stream": false
}
