eoc/eoc-rs/crates/eoc-vendor-api/tests/snapshots/snapshots__google_basic.snap
---
source: crates/eoc-vendor-api/tests/snapshots.rs
expression: body
---
{
  "contents": [
    {
      "parts": [
        {
          "text": "hello, world"
        }
      ],
      "role": "user"
    }
  ]
}
