eoc/eoc-rs/crates/eoc-vendor-api/tests/snapshots/snapshots__openai_streaming.snap
---
source: crates/eoc-vendor-api/tests/snapshots.rs
expression: body
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": "hello, world"
    }
  ],
  "stream": true
}
